# isegye_board_game

./: .gitattributes  README.md
ai/: Dockerfile  game.csv  main.py  recommendation.py  requirements.txt  swap_face.py
backend/: .gitignore  Dockerfile  build.gradle  settings.gradle
backend/src/main/resources/: application.properties
embedded/: .gitignore
embedded/IoT/Qt/: Qt.pro  mainwindow.cpp  mainwindow.h
embedded/IoT/device/: motor.py
embedded/ROS/: install-ros2.sh  ros_setup.sh
embedded/ROS/Display/: Display.pro
embedded/ROS/display/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
embedded/ROS/image_processing/: test.py
embedded/ROS/mqtt/: Isegye.py
embedded/ROS/test_ws/install/: local_setup.sh  setup.sh
exec/: Porting Manual.md  accio_isegye-2024_05_17_13_34_22-dump.sql
frontend/: .gitignore  Jenkinsfile-android-customer.groovy  Jenkinsfile-android-manager.groovy  Jenkinsfile-web.groovy
frontend/BgManager/: Dockerfile  build.gradle.kts  settings.gradle.kts
frontend/BgManager/app/: build.gradle.kts
frontend/BgManager/data/: build.gradle.kts
frontend/BgManager/domain/: build.gradle.kts
frontend/BgManager/gradle/: libs.versions.toml
frontend/BgManager/local/: build.gradle.kts
frontend/BgManager/presentation/: build.gradle.kts
frontend/BgManager/remote/: build.gradle.kts
frontend/IsegyeBoard/: Dockerfile  build.gradle.kts  settings.gradle.kts
frontend/IsegyeBoard/app/: build.gradle.kts  google-services.json
frontend/IsegyeBoard/gradle/: libs.versions.toml
frontend/Web/boardgame/: .gitignore  Dockerfile  package-lock.json  package.json  vue.config.js
(+353 files in other folders)
